# node-gphoto2

./: .gitignore  CMakeLists.txt  package.json
examples/: server.coffee
examples/public/: index.html
